--- a/UI/UnoContoso/UnoContoso.Shared/Views/OrderListView.xaml
+++ b/UI/UnoContoso/UnoContoso.Shared/Views/OrderListView.xaml
@@ -222,6 +222,7 @@
                         <AdaptiveTrigger MinWindowWidth="{StaticResource MinWindowSnapPoint}" />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
+                        <Setter Target="PageTitle.Margin" Value="30,4,0,0"/>
                         <Setter Target="listSplitView.DisplayMode" Value="Overlay" />
                         <Setter Target="listSplitView.IsPaneOpen" Value="False" />
                     </VisualState.Setters>
