--- a/UI/UnoContoso/UnoContoso.Shared/Views/Shell.xaml
+++ b/UI/UnoContoso/UnoContoso.Shared/Views/Shell.xaml
@@ -29,8 +29,9 @@
             AlwaysShowHeader="False"
             IsTabStop="False">
             <i:Interaction.Behaviors>
-                <behaviors:NavigationViewBehavior MenuItems="{Binding Menus}"
-                                                  SelectedMenuItem="{Binding SelectedItem, Mode=TwoWay}"/>
+                <behaviors:NavigationViewBehavior 
+                    MenuItems="{Binding Menus}"
+                    SelectedMenuItem="{Binding SelectedItem, Mode=TwoWay}"/>
             </i:Interaction.Behaviors>
             <ContentControl 
                 prismRegions:RegionManager.RegionName="ContentRegion" 
