--- a/UI/UnoContoso/UnoContoso.Shared/Views/HomeView.xaml
+++ b/UI/UnoContoso/UnoContoso.Shared/Views/HomeView.xaml
@@ -33,7 +33,7 @@
                         </Style>
                     </StackPanel.Resources>
                     <TextBlock Style="{StaticResource SubtitleTextBlockStyle}">
-                        This is a project that ported Microsoft's Contoso Enterprise UWP app to Uno Platform Prism.
+                        This is a port of Microsoft's Contoso Enterprise UWP app to the Uno Platform, using Prism.
                     </TextBlock>
                     <TextBox Header="Uno Platform" IsReadOnly="True"
                              Text="https://platform.uno/">
