--- a/UI/UnoContoso/UnoContoso.Shared/Views/HomeView.xaml
+++ b/UI/UnoContoso/UnoContoso.Shared/Views/HomeView.xaml
@@ -112,7 +112,7 @@
                 </VisualState>
                 <VisualState>
                     <VisualState.StateTriggers>
-                        <stateTriggers:MobileScreenTrigger InteractionMode="Touch" />
+                        <stateTriggers:MobileScreenTrigger />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
                         <Setter Target="PageTitle.Margin" Value="30,4,0,0"/>
