--- a/UI/UnoContoso/UnoContoso.Shared/Views/OrderListView.xaml
+++ b/UI/UnoContoso/UnoContoso.Shared/Views/OrderListView.xaml
@@ -230,7 +230,7 @@
                 </VisualState>
                 <VisualState>
                     <VisualState.StateTriggers>
-                        <stateTriggers:MobileScreenTrigger InteractionMode="Touch" />
+                        <stateTriggers:MobileScreenTrigger />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
                         <Setter Target="listSplitView.(RelativePanel.Above)" Value="mainCommandBar" />
