--- a/UI/UnoContoso/UnoContoso.Shared/Views/CustomerDetailView.xaml
+++ b/UI/UnoContoso/UnoContoso.Shared/Views/CustomerDetailView.xaml
@@ -306,7 +306,7 @@
                 </VisualState>
                 <VisualState>
                     <VisualState.StateTriggers>
-                        <stateTriggers:MobileScreenTrigger InteractionMode="Touch" />
+                        <stateTriggers:MobileScreenTrigger />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
                         <Setter Target="DetailPanel.(RelativePanel.Above)" Value="mainCommandBar" />
