--- a/UI/UnoContoso/UnoContoso.Shared/Views/CustomerListView.xaml
+++ b/UI/UnoContoso/UnoContoso.Shared/Views/CustomerListView.xaml
@@ -209,7 +209,7 @@
                 </VisualState>
                 <VisualState>
                     <VisualState.StateTriggers>
-                        <stateTriggers:MobileScreenTrigger InteractionMode="Touch"/>
+                        <stateTriggers:MobileScreenTrigger />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
                         <Setter Target="mainCommandBar.(RelativePanel.AlignBottomWithPanel)" Value="True" />
