--- a/UI/UnoContoso/UnoContoso.Shared/Views/OrderDetailView.xaml
+++ b/UI/UnoContoso/UnoContoso.Shared/Views/OrderDetailView.xaml
@@ -661,7 +661,7 @@
                 </VisualState>
                 <VisualState>
                     <VisualState.StateTriggers>
-                        <stateTriggers:MobileScreenTrigger InteractionMode="Touch" />
+                        <stateTriggers:MobileScreenTrigger />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
                         <Setter Target="sp1.(Grid.ColumnSpan)" Value="4" />
