fix: Update MapControl sample to Uno 3.3, add MapResources
This fixes MapControl for breaking changes introduced in Uno 3.0.

--- a/UI/MapControlSample/MapControlSample/MapControlSample.Shared/App.xaml
+++ b/UI/MapControlSample/MapControlSample/MapControlSample.Shared/App.xaml
@@ -1,8 +1,9 @@
-﻿<Application
-    x:Class="MapControlSample.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MapControlSample"
-    RequestedTheme="Light">
+﻿<Application x:Class="MapControlSample.App"
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:local="using:MapControlSample">
+	<Application.Resources>
+		<MapResources xmlns="using:Uno.UI.Maps" />
+	</Application.Resources>
 
 </Application>
