feat: Set MapControl.Center in sample
The middle of the Atlantic Ocean looks a little too much like a blank page.

--- a/UI/MapControlSample/MapControlSample/MapControlSample.Shared/MainPage.xaml
+++ b/UI/MapControlSample/MapControlSample/MapControlSample.Shared/MainPage.xaml
@@ -22,7 +22,8 @@
 					x:Name="zoomSlider"
 					Value="12" />
 		</StackPanel>
-		<maps:MapControl Grid.Row="1"
+		<maps:MapControl x:Name="MapControl"
+						 Grid.Row="1"
 						 ZoomLevel="{Binding ElementName=zoomSlider, Path=Value, Mode=TwoWay}" />
 	</Grid>
 </Page>
