--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/App.xaml
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/App.xaml
@@ -10,6 +10,8 @@
 
 				<ResourceDictionary Source="Styles/Icons.xaml" />
 				<ResourceDictionary Source="Styles/Colors.xaml" />
+
+				<ResourceDictionary Source="Styles/Controls/ToggleButton.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
 	</Application.Resources>
