--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Styles/Icons.xaml
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Styles/Icons.xaml
@@ -7,5 +7,7 @@
 	<x:String x:Key="IconGrid">M0 1.5A1.5 1.5 0 0 1 1.5 0h13A1.5 1.5 0 0 1 16 1.5v13a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 14.5v-13zM1.5 1a.5.5 0 0 0-.5.5V5h4V1H1.5zM5 6H1v4h4V6zm1 4h4V6H6v4zm-1 1H1v3.5a.5.5 0 0 0 .5.5H5v-4zm1 0v4h4v-4H6zm5 0v4h3.5a.5.5 0 0 0 .5-.5V11h-4zm0-1h4V6h-4v4zm0-5h4V1.5a.5.5 0 0 0-.5-.5H11v4zm-1 0V1H6v4h4z</x:String>
 	<x:String x:Key="IconMap">M15.817.113A.5.5 0 0 1 16 .5v14a.5.5 0 0 1-.402.49l-5 1a.502.502 0 0 1-.196 0L5.5 15.01l-4.902.98A.5.5 0 0 1 0 15.5v-14a.5.5 0 0 1 .402-.49l5-1a.5.5 0 0 1 .196 0L10.5.99l4.902-.98a.5.5 0 0 1 .415.103zM10 1.91l-4-.8v12.98l4 .8V1.91zm1 12.98l4-.8V1.11l-4 .8v12.98zm-6-.8V1.11l-4 .8v12.98l4-.8z</x:String>
 	<x:String x:Key="IconMountains">M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z</x:String>
+	<x:String x:Key="DarkModeIcon">M19.7 15c-2.5.8-5.4.3-7.4-1.7-2.5-2.5-2.7-6.5-.7-9.3-4.1.4-7.3 3.8-7.3 8 0 4.4 3.6 8 8 8 3.3 0 6.2-2.1 7.4-5z</x:String>
+	<x:String x:Key="LightModeIcon">M6.76 5.31L4.96 3.51 3.55 4.928l1.79 1.798L6.76 5.31zM4 10.995H1v2.01h3v-2.01zM13 1h-2v2.963h2V1zm7.45 3.928L19.04 3.51 17.25 5.31l1.41 1.416 1.79-1.798zM17.24 18.69l1.79 1.809 1.41-1.417-1.8-1.798-1.4 1.406zM20 10.995v2.01h3v-2.01h-3zm-8-5.022c-3.31 0-6 2.702-6 6.027s2.69 6.027 6 6.027 6-2.702 6-6.027-2.69-6.027-6-6.027zM11 23h2v-2.963h-2V23zm-7.45-3.928l1.41 1.417 1.79-1.809-1.41-1.416-1.79 1.808z</x:String>
 
 </ResourceDictionary>
